Added access to private fields for JUnit tests